# clap

./: .ghci  .gitignore  CHANGELOG.md  Makefile  README.md  clap.cabal  shell.nix
app/: Main.hs
cbits/: helper.c
cbits/clap/ext/: gui.h
dep/nixpkgs/: github.json
examples/: PlayNote.hs
include/clap/ext/: gui.h
src/: Clap.hs
src/Clap/: Debug.hs  Engine.hs  Example.hs  Extension.hs  Host.hs  Library.hs
src/Clap/Interface/: AudioBuffer.hs  Color.hs  Entry.hs  Events.hs  Fixedpoint.hs  Foreign.hs  Host.hs  Id.hs  Plugin.hs  PluginFactory.hs  PluginFeatures.hs  PluginInvalidation.hs  Process.hs  Stream.hs  StringSizes.hs  Version.hs
src/Clap/Interface/Extension/: AudioPorts.hs  Gui.hs  Latency.hs  Log.hs  NotePorts.hs  Params.hs  Render.hs  State.hs  Tail.hs  ThreadCheck.hs
src/Clap/Interface/Extension/Foreign/: AudioPorts.hs  AudioPorts.hsc  AudioPortsConfig.hsc  EventRegistry.hsc  Gui.hs  Gui.hsc  Latency.hs  Latency.hsc  Log.hs  Log.hsc  NoteName.hsc  NotePorts.hs  NotePorts.hsc  Params.hs  Params.hsc  PosixFdSupport.hsc  Render.hs  Render.hsc  State.hs  State.hsc  Tail.hs  Tail.hsc  ThreadCheck.hs  ThreadCheck.hsc  ThreadPool.hsc  TimerSupport.hsc  VoiceInfo.hsc
src/Clap/Interface/Foreign/: AudioBuffer.hs  AudioBuffer.hsc  Color.hs  Color.hsc  Entry.hs  Entry.hsc  Events.hs  Events.hsc  Fixedpoint.hs  Fixedpoint.hsc  Host.hs  Host.hsc  Id.hs  Id.hsc  Plugin.hs  Plugin.hsc  PluginFactory.hs  PluginFactory.hsc  PluginInvalidation.hs  PluginInvalidation.hsc  Process.hs  Process.hsc  Stream.hs  Stream.hsc  Version.hs  Version.hsc
