cabal-version:      2.4
name:               clap
version:            0.1.0.0
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Clap,
                      Clap.Engine,
                      Clap.Extension,
                      Clap.Host,
                      Clap.Library,

                      Clap.Interface.AudioBuffer,
                      Clap.Interface.Color,
                      Clap.Interface.Entry,
                      Clap.Interface.Events,
                      Clap.Interface.Fixedpoint,
                      Clap.Interface.Host,
                      Clap.Interface.Id,
                      Clap.Interface.Plugin,
                      Clap.Interface.PluginFactory,
                      Clap.Interface.PluginFeatures,
                      Clap.Interface.PluginInvalidation,
                      Clap.Interface.Process,
                      Clap.Interface.StringSizes,
                      Clap.Interface.Stream,
                      Clap.Interface.Version,

                      Clap.Interface.Foreign,
                      Clap.Interface.Foreign.AudioBuffer,
                      Clap.Interface.Foreign.Color,
                      Clap.Interface.Foreign.Entry,
                      Clap.Interface.Foreign.Events,
                      Clap.Interface.Foreign.Fixedpoint,
                      Clap.Interface.Foreign.Host,
                      Clap.Interface.Foreign.Id,
                      Clap.Interface.Foreign.Plugin,
                      Clap.Interface.Foreign.PluginFactory,
                      Clap.Interface.Foreign.PluginInvalidation,
                      Clap.Interface.Foreign.Process,
                      Clap.Interface.Foreign.Stream,
                      Clap.Interface.Foreign.Version,
                      
                      Clap.Interface.Extension.AudioPorts,
                      Clap.Interface.Extension.Gui,
                      Clap.Interface.Extension.Latency,
                      Clap.Interface.Extension.Log,
                      Clap.Interface.Extension.NotePorts,
                      Clap.Interface.Extension.Params,
                      Clap.Interface.Extension.Render,
                      Clap.Interface.Extension.State,
                      Clap.Interface.Extension.Tail,
                      Clap.Interface.Extension.ThreadCheck,

                      Clap.Interface.Extension.Foreign.AudioPorts,
                      Clap.Interface.Extension.Foreign.Gui,
                      Clap.Interface.Extension.Foreign.Latency,
                      Clap.Interface.Extension.Foreign.Log,
                      Clap.Interface.Extension.Foreign.NotePorts,
                      Clap.Interface.Extension.Foreign.Params,
                      Clap.Interface.Extension.Foreign.Render,
                      Clap.Interface.Extension.Foreign.State,
                      Clap.Interface.Extension.Foreign.Tail,
                      Clap.Interface.Extension.Foreign.ThreadCheck
    build-depends:    base,
                      bindings-DSL,
                      containers,
                      directory,
                      extra,
                      filepath,
                      portaudio
    if os(windows)
        other-modules: Clap.Library.Windows
        build-depends: Win32
        cpp-options:   -DWINDOWS
        extra-lib-dirs:   C:\\ghcup\\msys64\\mingw64\\bin
    else
        other-modules: Clap.Library.POSIX
        build-depends: unix
    build-tool-depends: hsc2hs:hsc2hs
    hs-source-dirs:   src
    default-language: Haskell2010
    include-dirs:     clap/include,
                      cbits
    c-sources:        cbits/helper.c
    extra-libraries:  portaudio
    
executable clap-exe
    main-is:          Main.hs
    build-depends:    base,
                      clap
    hs-source-dirs:   app
    default-language: Haskell2010
    include-dirs:     clap/include